[package]
name = "bevy_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
rand = "0.8.5"
# bevy-inspector-egui = "0.13"
bevy_tweening = "0.11"
bevy_editor_pls = "0.9"

